syntax = "proto3"; // 指定proto版本

package aaa;     // 指定包名
import "common/common_public.proto";

option go_package = "rpc/aaa"; // 指定路径

// 定义aaa服务
service aaa {
    // 定义SayHello方法
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}

// HelloRequest 请求结构
message HelloRequest {
    string name = 1; // 名字
}

// HelloReply 响应结构
message HelloReply {
    string message = 1; // 消息
    common.ResultResp result = 2;// 多proto 文件样例
}
